<resources>
    <string name="app_name">ClientServise1</string>
    <string name="nav_home">Главная</string>
    <string name="nav_note">Записи</string>
    <string name="nav_profile">Профиль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Category">Категории услуг</string>
    <string name="name">Бронирование услуг</string>
    <string name="CRM">СРМ - система и онлайн-запись</string>

    <string name="endRegistration">Завершить регистрацию</string>
    <string name="confirmPassword">Подтвердите пароль</string>
    <string name="Password">Пароль</string>
    <string name="Phone">Телефон</string>
    <string name="Name_secName">Имя и фамилия</string>
    <string name="login">Логин</string>
    <string name="e_mail">Почта</string>
    <string name="name_Company">Название компании</string>
    <string name="next">Далее</string>
    <string name="reg_as_company">Зарегистрироваться как организация</string>
    <string name="miss_your_password">Забыли свои учетные данные?</string>
    <string name="help_missing_password">Получить помощь со входом в систему</string>
    <string name="enter_as_guest">Войти как гость</string>
    <string name="not_have_account">У вас еще нет аккаунта?</string>
    <string name="registration">Зарегистрируйтесь</string>
    <string name="Enter">Войти</string>
    <string name="title_activity_notification_settings">Настройка уведомлений</string>
    <string name="supportEmailAddress">support@example.com</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
