<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/info"
        android:background="@drawable/circle_layout">

        <ImageView
            android:id="@+id/im_company"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:background="#00000000"
            android:src="@drawable/start_logo256" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/im_company"
            android:background="#00000000"
            android:text="@string/name"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/im_company"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:text="@string/CRM"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_layout"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/et_email"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/et_password"
            android:layout_marginTop="20dp"
            android:text="@string/Enter"
            android:background="@drawable/button_style"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_enter"
            android:text="@string/miss_your_password"/>

        <TextView
            android:id="@+id/tv_btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:layout_below="@+id/tv_help"
            android:text="@string/help_missing_password"
            android:textColor="@android:color/holo_blue_dark"/>

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:layout_below="@+id/tv_btn_help"
            android:text="@string/not_have_account"/>

        <TextView
            android:id="@+id/Registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_question"
            android:text="@string/registration"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/holo_blue_dark"/>
    </RelativeLayout>

</RelativeLayout>