<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationCompany">

    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle_layout">

        <ImageView
            android:id="@+id/im_company"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:background="#00000000"
            android:src="@drawable/start_logo256" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/im_company"
            android:background="#00000000"
            android:text="@string/name"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_centerVertical="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/im_company"
            android:background="#00000000"
            android:text="@string/CRM"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reg_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_layout">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:layout_below="@id/editText1"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/editText2"
            android:hint="@string/name_Company"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:inputType="textLongMessage"/>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/editText3"
            android:hint="@string/Phone"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/HelpMassage"
            android:layout_width="365dp"
            android:layout_below="@id/editText4"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light"
            />

        <EditText
            android:id="@+id/PasswordCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:layout_below="@id/HelpMassage"
            android:hint="@string/Password"
            android:textSize="18sp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/PasswordCompany"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:textSize="18sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/b_regCom"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editText6"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_style"
            android:text="@string/endRegistration"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>