<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:id="@+id/rl_logo1"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/circle">
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_layout">

        <ImageView
            android:id="@+id/im_company"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/start_logo256" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/im_company"
            android:layout_marginEnd="30dp"
            android:text="@string/name"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="0dp"
            android:textSize="13sp"
            android:layout_toEndOf="@id/im_company"
            android:text="@string/CRM" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_below="@id/rl_logo"
        android:layout_marginTop="15dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/circle">
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_logo"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_layout"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/editText1"
            android:hint="@string/e_mail"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tv_RegCom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/b_next"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="20dp"
            android:text="@string/reg_as_company"
            android:textSize="15sp"
            android:textColor="@android:color/holo_blue_dark"
            />

        <Button
            android:id="@+id/b_next"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/next"
            android:layout_below="@id/editText2"
            android:background="@drawable/button_style"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>