<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/info"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle_layout">

        <ImageView
            android:id="@+id/im_company"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:background="#00000000"
            android:src="@drawable/start_logo256" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/im_company"
            android:background="#00000000"
            android:text="@string/name"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_centerVertical="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/im_company"
            android:background="#00000000"
            android:text="@string/CRM"
            android:textSize="10sp" />

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/info"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="55dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_layout">

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:text="Версия приложения:"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_version2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/tv_version"
                android:background="#00000000"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_devs"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_below="@id/tv_version"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:background="#00000000"
                android:text="Разработчики приложения:"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_devs1"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_below="@+id/tv_devs"
                android:layout_marginStart="20dp"
                android:background="#00000000"
                android:text="Филиппова А.А."
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_devs2"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_below="@+id/tv_devs1"
                android:layout_marginStart="20dp"
                android:background="#00000000"
                android:text="Глебов Е.П."
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_devs3"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_below="@+id/tv_devs2"
                android:layout_marginStart="20dp"
                android:background="#00000000"
                android:text="Козуб С.И."
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_devs4"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_below="@+id/tv_devs3"
                android:layout_marginStart="20dp"
                android:background="#00000000"
                android:text="Николаенко Д.М."
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_devs5"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_below="@+id/tv_devs4"
                android:layout_marginStart="20dp"
                android:background="#00000000"
                android:text="Василенко А.А."
                android:textAlignment="center"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_devs5"
                android:layout_marginStart="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="20dp"
                android:background="#00000000"
                android:text="@string/supportEmailAddress"
                android:textAlignment="center"
                android:textSize="20sp" />

        </RelativeLayout>
</RelativeLayout>